--- a/src/css/index.css
+++ b/src/css/index.css
@@ -129,6 +129,7 @@ main {
 }
 
 
+
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -142,14 +143,19 @@ main {
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
+
+  img {
+    width: 100%;
+  }
   
   /* Modal Content */
   .modal-content {
-    background-color: #fefefe;
+    background-color: #942121;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    
   }
   
   /* The Close Button */
