--- a/src/css/index.css
+++ b/src/css/index.css
@@ -56,6 +56,7 @@ section {
 main {
     display: flex;
     flex-wrap: wrap;
+    justify-content:center ;
 }
 .movie {
     width: 300px;
@@ -170,3 +171,6 @@ main {
     text-decoration: none;
     cursor: pointer;
   }
+
+
+  
