--- a/src/css/allmovies.css
+++ b/src/css/allmovies.css
@@ -22,29 +22,49 @@ body {
 header{
     padding: 1rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     background-color: var(--secondary-color);
 }
-
 section {
     display: flex;
     justify-content: center;
 }
 
-.navbar {
-    display: flex;
 
+.row {
+    display: flex;
+    justify-content: center;
 }
+
+a{
+    border: 2px solid;
+    border-radius: 20px;
+    padding: 5px;
+    text-decoration: none;
+    font-size: 35px;
+    
+    
+}
+
+a:hover {
+    background-color: #2997ad
+}
+
 .search {
     display: flex;
+    justify-items: flex-end;
     background-color:  transparent;
+    width: 100%;
     border:2px solid;
     border-radius:50px ;
     font-size: 1rem;
-    padding: 1rem;
+    margin-top: 20px;
+    padding: 20px;
     color:  var(--primary-color);
 
 }
+
 
 .search::placeholder {
     color: white
@@ -53,6 +73,12 @@ section {
     outline:  none;
 }
 
+@media (max-width: 320px){
+    .search{
+        display: none;
+    }
+
+}
 main {
     display: flex;
     flex-wrap: wrap;
@@ -120,14 +146,11 @@ main {
 .footer {
     
         display: flex;
-        justify-content: center;
         background-color: #000000;
         width: 100%;
-        height: 10vh;
-        
-        
-
+        height: auto;     
 }
+
 
 .modal {
     display: none; /* Hidden by default */
@@ -173,4 +196,87 @@ main {
   }
 
 
-  
+
+  .container{
+	max-width: 1170px;
+	margin:auto;
+}
+.row{
+	display: flex;
+	flex-wrap: wrap;
+}
+ul{
+	list-style: none;
+}
+.footer{
+	background-color: #24262b;
+    padding: 70px 0;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #e91e63;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(255,255,255,0.2);
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
+}
+}
