--- a/src/css/allmovies.css
+++ b/src/css/allmovies.css
@@ -5,13 +5,13 @@
 :root {
     --primary-color: #0f3f49;
     --secondary-color: #427aa1;
-    --third-color : #064789;
+    --third-color: #064789;
 }
 
 
 * {
-    box-sizing:border-box ;
-    
+    box-sizing: border-box;
+
 }
 
 body {
@@ -19,84 +19,88 @@ body {
     font-family: sans-serif;
     margin: 0;
 }
-header{
+
+header {
     padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: var(--secondary-color);
 }
+
 section {
     display: flex;
     justify-content: center;
 }
 
-
-.row {
-    display: flex;
-    justify-content: center;
-}
-
-a{
+a {
     border: 2px solid;
     border-radius: 20px;
     padding: 5px;
     text-decoration: none;
     font-size: 35px;
-    
-    
+
+
 }
 
 a:hover {
     background-color: #2997ad
 }
 
+.row {
+    display: flex;
+    justify-content: center;
+}
+
 .search {
     display: flex;
     justify-items: flex-end;
-    background-color:  transparent;
+    background-color: transparent;
     width: 100%;
-    border:2px solid;
-    border-radius:50px ;
+    border: 2px solid;
+    border-radius: 50px;
     font-size: 1rem;
     margin-top: 20px;
     padding: 20px;
-    color:  var(--primary-color);
+    color: var(--primary-color);
 
 }
-
 
 .search::placeholder {
     color: white
 }
+
 .search:focus {
-    outline:  none;
+    outline: none;
 }
 
-@media (max-width: 320px){
-    .search{
+@media (max-width: 320px) {
+    .search {
         display: none;
     }
 
 }
+
 main {
     display: flex;
     flex-wrap: wrap;
-    justify-content:center ;
+    justify-content: center;
 }
+
 .movie {
     width: 300px;
-    margin:  1rem;
+    margin: 1rem;
     background-color: var(--third-color);
-    box-shadow: 0 4px 5px rgba(0,0,0,0.2,);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2, );
     position: relative;
-    overflow:  hidden;
+    overflow: hidden;
     border-radius: 3px;
 }
 
 .movie img {
-    width:  100%;
+    width: 100%;
 }
+
 .movie-info {
     color: #eee;
     display: flex;
@@ -106,7 +110,7 @@ main {
     letter-spacing: 1px;
 }
 
-.movie-info span{
+.movie-info span {
     background-color: var(--primary-color);
     padding: 0.25rem 0.5rem;
     border-radius: 3px;
@@ -117,10 +121,12 @@ main {
 .movie-info span.green {
     color: lightgreen;
 }
+
 .movie-info span.orange {
     color: orange;
 }
-.movie-info span.red{
+
+.movie-info span.red {
     color: red;
 }
 
@@ -137,146 +143,167 @@ main {
     transition: transform 0.3s ease;
 }
 
-.movie:hover .overview{
+.movie:hover .overview {
     transform: translateY(0);
 }
 
 
 
 .footer {
-    
-        display: flex;
-        background-color: #000000;
-        width: 100%;
-        height: auto;     
+
+    display: flex;
+    background-color: #000000;
+    width: 100%;
+    height: auto;
 }
 
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-
-  img {
     width: 100%;
-  }
-  
-  /* Modal Content */
-  .modal-content {
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+img {
+    width: 100%;
+}
+
+/* Modal Content */
+.modal-content {
     background-color: #942121;
     margin: auto;
     padding: 20px;
     border: 1px solid #b62f2f;
     width: 50%;
-    
-  }
-  
-  /* The Close Button */
-  .close {
+
+}
+
+/* The Close Button */
+.close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
 
 
-  .container{
-	max-width: 1170px;
-	margin:auto;
+.container {
+    max-width: 1170px;
+    margin: auto;
 }
-.row{
-	display: flex;
-	flex-wrap: wrap;
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
 }
-ul{
-	list-style: none;
+
+ul {
+    list-style: none;
 }
-.footer{
-	background-color: #24262b;
+
+.footer {
+    background-color: #24262b;
     padding: 70px 0;
 }
-.footer-col{
-   width: 25%;
-   padding: 0 15px;
+
+.footer-col {
+    width: 25%;
+    padding: 0 15px;
 }
-.footer-col h4{
-	font-size: 18px;
-	color: #ffffff;
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
+
+.footer-col h4 {
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    font-weight: 500;
+    position: relative;
 }
-.footer-col h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	background-color: #e91e63;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
+
+.footer-col h4::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #e91e63;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
 }
-.footer-col ul li:not(:last-child){
-	margin-bottom: 10px;
+
+.footer-col ul li:not(:last-child) {
+    margin-bottom: 10px;
 }
-.footer-col ul li a{
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	display: block;
-	transition: all 0.3s ease;
+
+.footer-col ul li a {
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
 }
-.footer-col ul li a:hover{
-	color: #ffffff;
-	padding-left: 8px;
+
+.footer-col ul li a:hover {
+    color: #ffffff;
+    padding-left: 8px;
 }
-.footer-col .social-links a{
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: rgba(255,255,255,0.2);
-	margin:0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: #ffffff;
-	transition: all 0.5s ease;
+
+.footer-col .social-links a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
 }
-.footer-col .social-links a:hover{
-	color: #24262b;
-	background-color: #ffffff;
+
+.footer-col .social-links a:hover {
+    color: #24262b;
+    background-color: #ffffff;
 }
 
 /*responsive*/
-@media(max-width: 767px){
-  .footer-col{
-    width: 50%;
-    margin-bottom: 30px;
+@media(max-width: 767px) {
+    .footer-col {
+        width: 50%;
+        margin-bottom: 30px;
+    }
 }
-}
-@media(max-width: 574px){
-  .footer-col{
-    width: 100%;
-}
+
+@media(max-width: 574px) {
+    .footer-col {
+        width: 100%;
+    }
 }
